# get-interest-over-time-gtrends

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config_example.yaml  docker-compose.yml  main.py  main_backup.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: default.yaml  production.yaml
examples/: advanced_usage.py  basic_usage.py
scripts/: install.sh
src/trends_analyzer/: __init__.py
src/trends_analyzer/cli/: __init__.py  main.py
src/trends_analyzer/core/: __init__.py  analyzer.py  collector.py  processor.py
src/trends_analyzer/exporters/: __init__.py  base_exporter.py  bigquery_exporter.py  csv_exporter.py  json_exporter.py
src/trends_analyzer/utils/: __init__.py  config.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/test_core/: test_analyzer.py
tests/test_exporters/: test_csv_exporter.py
tests/test_utils/: test_validators.py
